fixed discipulador not showing on the sidebar

--- a/src/components/layout/Layout.module.css
+++ b/src/components/layout/Layout.module.css
@@ -3,7 +3,7 @@
 }
 
 .sidebar {
-    width: 250px;
+    width: 270px;
     padding: 0;
     position: fixed;
     top: 0;
