--- a/src/components/layout/Sidebar/Sidebar.module.css
+++ b/src/components/layout/Sidebar/Sidebar.module.css
@@ -227,7 +227,7 @@ header .imageText .name {
 }
 
 .show {
-    max-height: 200px;
+    max-height: 300px;
     /* Adjust according to the content */
     opacity: 1;
     transition: max-height 0.3s ease-in, opacity 0.3s ease-in;
